Enable hotspot VPN usage by default, to prevent leaks
Change-Id: Id67b22290d1d5962fc04db5b78f9848a59a5c53e

--- a/packages/LineageSettingsProvider/res/values/defaults.xml
+++ b/packages/LineageSettingsProvider/res/values/defaults.xml
@@ -43,7 +43,7 @@
     <bool name="def_panic_in_power_menu">false</bool>
 
     <!-- Default for LineageSettings.Secure.TETHERING_ALLOW_VPN_UPSTREAMS -->
-    <bool name="def_tethering_allow_vpn_upstreams">false</bool>
+    <bool name="def_tethering_allow_vpn_upstreams">true</bool>
 
     <!-- Defaults for System -->
 
