Use our own app names for SDK and SettingsProvider
Avoid user confusion.

Change-Id: I6d89cd523ea1afe3c8f39fbfa176b1cd8fd16101

--- a/lineage/res/res/values/calyx_strings.xml
+++ b/lineage/res/res/values/calyx_strings.xml
@@ -4,4 +4,6 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources>
+    <!-- Label for the CalyxOS system components when they are shown to the user. -->
+    <string name="calyxos_system_label">CalyxOS System</string>
 </resources>
